@startuml
class "Buff" as buff {
}

class "SpeedBuff" as speedBuff {
}
buff <|-- speedBuff : Inheritance
speedBuff..>speedBuffData : Uses

class "FlyingBuff" as flyingBuff {
}
buff <|-- flyingBuff : Inheritance
flyingBuff..>flyingBuffData : Uses

class "BuffData" as buffData {
}

class "SpeedBuffData" as speedBuffData {
}
buffData <|-- speedBuffData : Inheritance

class "FlyingBuffData" as flyingBuffData {
}
buffData <|-- flyingBuffData : Inheritance

class "BuffCollection" as buffCollection {
    -Buff[] buffs
    +void AddBuff(Buff buff)
    +void RemoveBuff(Buff buff)
}

class "BuffFactory" as buffFactory {
    +Buff CreateBuff(BuffData data)
}

class "BuffInteractiveObject" as buffInteractiveObject {
}

buffFactory --> buff : Creates
buffCollection o-- buff : Aggregation
buffInteractiveObject ..> buffFactory : Uses

@enduml